<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="32dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:lineSpacingExtra="4.5dp"
        android:text="@string/verify"
        android:textColor="#444A59" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/contact_details"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_login_modal_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="20sp"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_login_modal_mobile_number_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:textSize="20sp"
            android:maxLength="10"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/fragment_login_modal_verify_mobile_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@drawable/background_button_purple"
            android:text="@string/verify_mobile"
            android:textAllCaps="false"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/fragment_login_modal_progress_bar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:visibility="gone"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:theme="@style/Progressbar.White"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D8DEEB"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:text="@string/need_help"
        android:textColor="#444A59"
        android:fontFamily="sans-serif-medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="4dp"
                android:text="@string/truebil_care"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="#444A59" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="4dp"
                android:text="@string/truebil_care_number"
                android:textColor="#5C6AC4"
                android:fontFamily="sans-serif-medium"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/fragment_login_modal_call_truebil_image_button"
            android:src="@drawable/phone_purple"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#D8DEEB"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:autoLink="web"
        android:text="@string/explore_truebil_website"
        android:ellipsize="end"
        android:textColor="#444A59" />

</LinearLayout>